<resources>
    <string name="app_name">Bundan</string>
    <string name="action_settings">Settings</string>
    <string name="error_do_again">Error, Please try again</string>
    <string name="error_birthday">Please, insert your birthday to Facebook</string>
    <string name="itsmatch">It\'s a Match!</string>
    <string name="send_message">Send a message</string>
    <string name="search">Search</string>
    <string name="new_match">Your perfect pair</string>
    <string name="messages">Messages</string>
    <string name="find_gender">Gender</string>
    <string name="age_range">Range of age</string>
    <string name="logout">Logout</string>
    <string name="work">Work</string>
    <string name="education">Education</string>
    <string name="write_message">Type message...</string>
    <string name="send">Send</string>
    <string name="faq">We will get your information from your facebook account and we strongly forbid to use it to illegal actions. For more information, please visit here.</string>
    <string name="storage_path">gs://bundan-e28d3.appspot.com</string>
    <string name="facebook_img_url">http://graph.facebook.com/%s/picture?width=9999&amp;height=9999</string>
    <string name="keep_swiping">Return</string>
    <string name="matchText"> %s Finally, You found your perfect pair</string>
    <string name="headerText"> %s Both of you </string>
    <string name="dateText">\n %s become a great couple from this day</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">726964594134724</string>
    <string name="error_url_null">URl is empty</string>
    <string name="error_image">Image upload error</string>
    <string name="logout_submission">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fb_login_protocol_scheme">fb726964594134724</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_match">Match</string>
    <string name="title_activity_tinder_card_detail">TinderCardDetail</string>
    <string name="title_activity_dsadsa">dsadsa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
